Remembering search term after page redirects and 404 error content overflow out of the body is now fixed

--- a/_sass/main.scss
+++ b/_sass/main.scss
@@ -15,10 +15,13 @@ body {
   color: var(--paragraph-heading-color);
 }
 
-
 p {
   opacity: var(--paragraph-opacity);
   font-size:var(--paragraph-font-size);
+}
+
+.display-none {
+  display: none;
 }
 
 .container {
